# IntDecApp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  analyze_reconstruction.py  debug_colmap_coords.py  debug_renderer.py  dense_reconstruction.py  image_based_view_synthesis.py  main.py  minimal_render_test.py  opencv_dense_depth.py  pyproject.toml  quick_fix_test.py  run_colmap_with_poses.py  single_image_depth.py  test_colmap_fast.py  test_colmap_final.py  test_colmap_reconstruction.py  test_colmap_rendering.py  test_colmap_simple.py  test_colmap_v2.py  test_coordinate_fix.py  test_dense_view_synthesis.py  test_depth_reconstruction.py  test_final_fix.py  test_improved_matching.py  test_improved_rendering.py  test_reconstruction.py  test_view_synthesis.py  test_virtual_navigation.py  validate_photos.py  validate_photos_fast.py
docs/: README.md
docs/implementation/: POC-summary-final.md  Specification and Architecture.md  photo-capture-guide.md  project-decisions-summary.md
docs/research/: 3d-reconstruction-research-doc.md  3d_visualization_documentation.md  Building browser-based 3D visualization from images and video.md
src/core/: camera_estimation.py  feature_extraction.py  reconstruction.py  renderer.py  triangulation.py  types.py
test_data2/: PXL_20250907_151728813.jpg:Zone.Identifier
